Refactor database connection and query handling for chatbot service
- Added CHAT_DATABASE_URI and DB_NAME_CHAT to .env for chat-specific database configuration.
- Updated chatService.js to use JSON.parse for safer query parsing.
- Enhanced output format for MongoDB query generation in chatService.js.
- Modified mongoService.js to connect using the new chat database name.
- Expanded allowed collections in schemaService.js for better data handling.

--- a/backend/.env
+++ b/backend/.env
@@ -8,4 +8,5 @@ DB_PASSWORD=kevith
 DATABASE_URI=mongodb+srv://induwara:induwara123@devthon.lcgboaa.mongodb.net/?retryWrites=true&w=majority&appName=DevThon
 CHAT_DATABASE_URI=mongodb+srv://induwara:induwara123@devthon.lcgboaa.mongodb.net/?retryWrites=true&w=majority&appName=DevThon
 DB_NAME=GuidelineX
+DB_NAME_CHAT= test
 GEMINI_API_KEY=AIzaSyADzksVB2dyw0tSEr5ZsLVgNKhC51EXmz4
